--- a/style.css
+++ b/style.css
@@ -54,13 +54,19 @@ body {
     display: flex;
     flex-direction: column;
     gap: 5px;
-    /* height: 200px; */
-    width: 400px;
+    width: 500px;
+    gap: 10px;
 
     p {
+        display: flex;
+        flex-direction: column;
+        font-size: 18px;
+        gap: 10px;
         label {}
 
-        input {}
+        input {
+            padding: 5px;
+        }
     }
 
     .radioButtons {
